# fast-lines

./: Cargo.toml
benches/: bench.rs
src/: lib.rs
tests/: test_lines.rs
